--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-    <title>Calculator</title>
+    <title>Simple Flask calculator</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
@@ -10,11 +10,11 @@
     <form action="calculate" method="post">
         <div class="row-fluid">
             <div class="col-4 mx-auto">
-                <h3 class="text-center">Flask calculator</h3>
+                <h3 class="text-center py-4">Flask calculator</h3>
                 
-                {% if error_msg != '' %}
-                    <p class="alert alert-danger">{{ error_msg}}</p>
-                {% endif %}
+                {% for message in get_flashed_messages() %}
+                    <p class="alert alert-danger">{{message}}</p>
+                {% endfor %}
                 
                 <div class="row mb-2">
                     <label for="num1" class="col-4">Number 1: </label>
@@ -25,7 +25,7 @@
                 <div class="row mb-2">
                     <label for="operation" class="col-4">Operation: </label>
                     <div class="col-8 form-group">                        
-                        <select name="operation" id="operation" class="form-control">
+                        <select name="operation" id="operation" class="form-select">
                             <option value="">--</option>
                             {% for i in range(maths_operations | length) %}
                             <option value="{{maths_operations[i]}}" {% if maths_operations[i] == operation %}selected{% endif %}>{{maths_operations[i]}}</option>
@@ -50,6 +50,12 @@
                 <div class="row mb-2">
                     <label for="result" class="col-4">Result: </label>
                     <div class="col-8"><input type="text" name="result" id="result" class="form-control" value="{{result}}"></div>
+                </div>
+                
+                 <div class="row justify-content-end mb-2">
+                    <div class="form-group col-8">
+                        <a href="/clear" class="btn btn-dark w-100">Clear</a>
+                    </div>
                 </div>
             </div>
         </div>
